--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: About Hank Quinlan
+title: A propos de poelon
 ---
 
 		<div class="about">
-			<h1>About</h1>
-			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
-
+			<h1>A propos</h1>
+			<p>Après une carrière de technicien j'ai étudié l'astrologie à l'Echelle humaine à Avignon. Ayant toujours été intéressé à déveloper des logiciels j'ai voulu essayer de créer une extension Firefox qui permette d'afficher à la fois le thème astral et un tableau des transits annuels à partir des coordonnées de naisssance, 
+                        résultat...</p><a href="#">https://addons.mozilla.org/fr/firefox/addon/astral_zodiaque/</a>
 			<ul class="contacts">
 				<li><a href="#">@TwitterHandle</a></li>
 				<li><a href="#">Your Departmental Webpage</a></li>
