--- a/cv/index.html
+++ b/cv/index.html
@@ -1,22 +1,21 @@
 ---
 layout: default
-title: CV of Your Name
+title: CV de poelon
 ---
 
 	<div class="cv">
 		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
-					<h1>Hank Quinlan</h1>
-					<address>
-					<strong>Affiliation</strong><br>
-					Street Address<br>
-					City State 12345<br>
-					<abbr title="phone">P:</abbr> (123) 456-7890<br>
-					<span class="obfuscate">youremailaddress@email.com</span>
+					<h1>Paul Noël</h1>
+					<!--<address>
+					<strong>Affiliation</strong><br>-->
+					Palaiseau, France<br>
+					<!--<abbr title="phone">P:</abbr> (123) 456-7890<br>-->
+					<span class="obfuscate">paul.noel1@free.fr</span>
 					</address>
 
-					<h2>Select Publications</h2>
+					<h2>Zodiaque</h2>
 
-					<p><strong>Last Name, F.</strong> (204). Title of a Chapter You Wrote for a Book. In I.M Editor (Ed.), <em>The Book I Contributed To</em> (pp. 97-108). City, ST: Publisher Name. Chapter available at: <a href="#">http://permalink</a>.
+					<p><strong>webextension</strong> (2017) pour Firefox, compatible  <em>Androïd et Chrome</em> , située à : <a href="#">https://addons.mozilla.org/fr/firefox/addon/astral_zodiaque/</a>
 
 
 	</div>
