--- a/assets/cv/index.html
+++ b/assets/cv/index.html
@@ -13,9 +13,9 @@ title: CV de poelon
 					<span class="obfuscate">paul.noel1@free.fr</span>
 					</address>
 
-					<h2>Zodiaque</h2>
+					<h2><a href="https://addons.mozilla.org/fr/firefox/addon/astral_zodiaque/">Zodiaque</a></h2>
 
-					<p><strong>webextension</strong> (2017) pour Firefox, compatible  <em>Androïd et Chrome</em> , située à : <a href="#">https://addons.mozilla.org/fr/firefox/addon/astral_zodiaque/</a>
+					<p><strong>webextension</strong> (2017) pour Firefox, compatible  <em>Androïd et Chrome</em>
 
 
 	</div>
