--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: poelon
 ---
 <div class="blurb">
-	<h1>Paul </h1>
-	<p>à la retraite et intéressé par l'<em>Astrologie</em>. <a href="/about">plus d'infos...</a></p>
+	<h1>Paul Noël</h1>
+	<p>à la retraite...et intéressé par l'<em>Astrologie</em>. <a href="/assets/about">plus d'infos...</a></p>
 </div><!-- /.blurb -->
